--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.26.17",
     "swr": "^2.3.6",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
